# home-core

./: .gitignore  Cargo.toml  README.md  dockerfile
src/: accounts.rs  configs.rs  main.rs  plugins.rs
